--- a/themes/plumasatomicas/style.css
+++ b/themes/plumasatomicas/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Tema Base TDC
+Theme Name: Plumas Atómicas 2.0
 Theme URI: http://tallerdecodigo.com
 Author: Pablo Covarrubias
 Author URI: http://tallerdecodigo.com
