--- a/themes/plumasatomicas/style.css
+++ b/themes/plumasatomicas/style.css
@@ -714,7 +714,7 @@ code {font-family:"TradeGothic20";background:#F7DEA0;color:#3F3F3F;padding:6px 6
 }
 
 
-#start-btn {color:#F7DCA3;font-size:125%;
+#start-btn {color:#F7DCA3;font-size:125%; cursor: pointer;
 }
 
 
@@ -1751,8 +1751,8 @@ code {font-family:"TradeGothic20";background:#F7DEA0;color:#3F3F3F;padding:6px 6
 }
 
 
-#lalista {border:1px solid #FFF;margin-left:-5px;padding:5px 12px 0px;
-}
+#lalista {border:1px solid #FFF;margin-left:-5px;padding:5px 12px 0px;}
+#lalista li{cursor: pointer;}
 
 
 .cell h1 {font-size:235%;margin:8px 0px 15px;
@@ -3871,7 +3871,7 @@ header {
 }
 
 .archivo {width:100%; text-align:center!important; margin-bottom:20px;}
-.who-archive {position:relative; width:33%; min-width:260px; vertical-align:bottom; text-align:center; margin:30px 0px 20px;}
+.who-archive {position:relative; width:33%; min-width:260px; vertical-align:top; text-align:center; margin:30px 0px 20px;}
 .who-archive div {width:128px; height:128px; border-radius:50%; background:#DCDCDC; overflow:hidden;}
 .who-archive span {width:100%;}
 .who-archive span:nth-of-type(1) {font-size:125%; margin:19px 0px 9px;}
