--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -1808,6 +1808,19 @@ nav.archii {padding:5px 40px 0px; margin-top:20px;}
 }
 
 
+/* LONG.HTML */
+
+.centrado {text-align:center!important;}
+.longr h1 {width:100%; max-width:710px; margin-top:25px;}
+.longr p {width:100%; max-width:710px;}
+.longr p:first-of-type {margin-top:60px;}
+.longr p:last-of-type {margin-bottom:100px;}
+
+@media (max-width: 999px) and (min-width: 685px){
+	.longr {width: 100%; max-width:710px;}
+}
+
+
 
 
 
