--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -1895,4 +1895,5 @@ nav.archii {padding:5px 40px 0px; margin-top:20px;}
 
 .twitter-tweet {margin: 0 auto!important;}
 
+p strong {color: #606060;}
 
