--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -633,7 +633,6 @@ code {
 
 .who, .postura {
 	position:relative;
-	width:47%;
 	min-width:260px;
 	vertical-align:bottom;
 	text-align:center;
@@ -642,7 +641,6 @@ code {
 
 .postura_link {
 	position:relative!important;
-	width:47%;
 	min-width:260px;
 	vertical-align:bottom;
 	text-align:center;
@@ -1913,4 +1911,14 @@ p strong {color: #606060;}
 @media (min-width:1000px) {
 	.list {display:block;}
 	#ficha-icon {display:none;}
+}
+
+/* OPINOLOGOS */
+
+@media (max-width: 684px) {
+	.who, .postura_link {width:100%;}
+}
+
+@media (min-width: 685px) {
+	.who, .postura_link {width:47%;}
 }
