--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -657,6 +657,7 @@ code {
 	position: relative!important;
 }
 
+
 .postura .pointer{
 	width: 25px;
 	height: 25px;
@@ -702,18 +703,18 @@ code {
 	width:240px;
 	height:240px;
 	margin-bottom:15px;
-	overflow:hidden;
 }
 
 .postura div img {
-	left:0px;
-	top:0px;
-	width:100%;
-	height:100%;
+	left:-9%;
+	top:-9%;
+	width:118%;
+	height:118%;
 	position:absolute;
 }
 
 .postura span {
+	margin-top:30px;
 	font-size:125%;
 	color:#85AAA2;
 	text-transform:uppercase;
@@ -954,7 +955,6 @@ ol li a {
 
 #list-container {
 	width:100%;
-	height:383px;
 	border:1px solid #FFF;
 	padding-right:48px;
 	overflow-y:scroll;
@@ -975,10 +975,6 @@ ol li a {
 	position:absolute;
 	display:block;
 	right:20px;
-}
-
-.despla:nth-of-type(1) {
-	bottom:349px;
 }
 
 .despla:nth-of-type(2) {
@@ -1925,3 +1921,7 @@ p strong {color: #606060;}
 @media (min-width: 685px) {
 	.who, .postura_link {width:47%;}
 }
+
+.opinologo h1 {text-align:center;}
+
+.list h1 a {color:inherit;}
