mejora en animacion

--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -1881,7 +1881,7 @@ nav.archii {padding:5px 40px 0px; margin-top:20px;}
 
 .chart {width:90%; margin:35px 0px 60px 0px;text-align:right; color:#545454;}
 .chart-col {width:50%;padding-left:10px;border-left:1px solid #545454;}
-.chart-anim {position:absolute;width:0%;height:100%;top:0px;left:-100%; background:#FFF; margin-left:-1px;-webkit-animation:ungrow 2s linear 0s;-moz-animation:ungrow 2s linear 0s;animation:ungrow 2s linear 0s;}
+.chart-anim {position:absolute;width:0%;height:100%;top:0px;left:-100%; background:#fafafa; margin-left:-1px;-webkit-animation:ungrow 2.5s linear 0s;-moz-animation:ungrow 2.5s linear 0s;animation:ungrow 2.5s linear 0s;}
 .ch-item {width:100%;margin:10px 0px;text-align:left; padding-top:5px;}
 .ch-item div {position:absolute; right:100%; top:0px; height:100%; margin-right:11px;}
 .ver1 {width:60%; background:#275eb6;}
@@ -1949,18 +1949,21 @@ p strong {color: #606060;}
 }
 
 @-webkit-keyframes ungrow {
-    from {width:100%;}
-    to {width:0%;}
+    0% {width:100%;}
+    50% {width:100%;}
+    100% {width:0%;}
 }
 
 @-moz-keyframes ungrow {
-    from {width:100%;}
-    to {width:0%;}
+    0% {width:100%;}
+    50% {width:100%;}
+    100% {width:0%;}
 }
 
 @keyframes ungrow {
-    from {width:100%;}
-    to {width:0%;}
+    0% {width:100%;}
+    50% {width:100%;}
+    100% {width:0%;}
 }
 
 
