--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -1339,6 +1339,7 @@ ol li a {
 	height:100%;
 	display:none;
 	border-top:2px solid #757575;
+	overflow-y:scroll;
 }
 
 .menu2 h4 {
@@ -1966,7 +1967,7 @@ p strong {color: #606060;}
     100% {width:0%;}
 }
 
-
+.fixeddd {position:fixed!important;}
 
 .list h1 a {color:inherit;}
 
