Modified front end for wadafact new graphics

--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -300,7 +300,7 @@ code {
 	border-radius:5px;
 	text-align:left;
 	overflow:hidden;
-	box-shadow:0 3px 3px -3px #000;
+	box-shadow:0 3px 3px -3px #cbcaca;
 	vertical-align:top;
 }
 
@@ -375,6 +375,7 @@ code {
 .post.mini span {
 	font-size: 2rem;
     letter-spacing: 0.6px;
+    text-decoration: none;
 }
 
 #home-content a.mini:nth-of-type(odd)  {
@@ -565,23 +566,35 @@ code {
 
 /*** WHAT THE FACT ***/
 
-
-.wadafact { max-width: 920px; margin: 0 4%;}
-.opinologo_columnista {width: 33%; float:left; min-height: 470px;}
+.divider{width: 94.5%; clear: both; display: block; margin: 1rem auto 2.5rem auto; border: 1px solid #adadad;}
+.wadafact { width: 100%; margin: 0 4%;}
+.opinologo_columnista {width: 33%; display: inline-block; vertical-align: top;}
+.opinologo_columnista .who{margin-bottom: 0;}
 .opinologo_columnista .thumb_container{width: 155px; height: 155px;}
-.wadafact .logo_wada {width: 100%; margin-bottom: 32px;}
+.wadafact .logo_wada {width: 100%; margin-bottom: 20px;}
 .wadafact .logo_wada img{float: left;}
 .wadafact .logo_wada h3{float: left; font-size: 26px; margin-top: 20px; font-weight: normal; text-transform: uppercase; color:#3f3f3f;}
 
 .titulo_post_opinologo {font-size: 65%; margin-left: 330px!important;}
 
-.cycle-pager{}
-.cycle-pager span{color: #dadada; font-size: 3rem; letter-spacing: 3px; cursor: pointer;}
+.columnists_slider{position: relative; min-height: 900px;}
+.slider_page{margin-top: 2rem;}
+.cycle-pager{z-index: 1990; text-align: center; width: 100%; position: absolute; top: 0; overflow: hidden; left: 0;}
+.cycle-pager span{color: #dadada; font-size: 2.8rem; letter-spacing: 2px; cursor: pointer; display: inline-block;}
 .cycle-pager span.cycle-pager-active{color: #d43b33;}
 
-.mini-wrapper.full{
-	
-}
+.mini-wrapper.full_two,
+.mini-wrapper.full_three{ width: 100%; max-width: 100%; text-align: center;}
+.mini-wrapper.full_two{text-align: left;}
+
+.mini-wrapper.full_two .post,
+.mini-wrapper.full_three .post{ width: 30%; vertical-align: top; margin-right: 1.5rem!important; text-decoration: none!important;}
+.mini-wrapper.full_two .post{ width: 48%;}
+.mini-wrapper.full_two .post.mini>span,
+.mini-wrapper.full_three .post.mini>span{ display: block; text-align: left; }
+.mini-wrapper.full_three .post:nth-of-type(3){margin-right: 0!important;}
+.mini-wrapper.full_two .post:nth-of-type(3){margin-right: 1.5rem!important;}
+.mini-wrapper.full_two .post:nth-of-type(2){margin-right: 0!important;}
 
 .whatthefact blockquote {
 	color:#3F3F3F;
@@ -669,8 +682,8 @@ code {
 
 
 .postura .pointer{
-	width: 25px;
-	height: 25px;
+	width: 18px;
+	height: 18px;
 	position: absolute;
 	display: block;
 	background-color: #FFF;
@@ -793,6 +806,7 @@ code {
 .sidebar a:nth-of-type(4) {
 	margin-top:30px;
 }
+.share_bar{ text-align: center; display: block;}
 
 /* Fichas */
 
@@ -1905,17 +1919,44 @@ nav.archii {padding:5px 40px 0px; margin-top:20px;}
 
 /* CHART EN COLUMNA.HTML */
 
-.chart {width:90%; margin:35px 0px 60px 0px;text-align:right; color:#545454;}
-.chart-col {width:50%;padding-left:10px;border-left:1px solid #545454;}
+.chart {width:90%; margin:35px 0px 60px 0px;text-align:right; color:#d3f8f1;}
+.chart-col {width:100%;padding-left:10px;border-left:1px solid #d3f8f1; color: #d3f8f1;}
 .chart-anim {position:absolute;width:0%;height:100%;top:0px;left:-100%; background:#fafafa; margin-left:-1px;-webkit-animation:ungrow 2.5s linear 0s;-moz-animation:ungrow 2.5s linear 0s;animation:ungrow 2.5s linear 0s;}
 .ch-item {width:100%;margin:10px 0px;text-align:left; padding-top:5px;}
-.ch-item div {position:absolute; right:100%; top:0px; height:100%; margin-right:11px;}
-.ver1 {width:60%; background:#275eb6;}
-.ver2 {width:80%; background:#06aaff;}
-.desc {width:100%; background:#8cd9ff;}
+.ch-item div {position:absolute; right:100%; top:0px; height:29px; margin-right:11px;}
+.ver1 {width:60%; background:#FFF;}
+.ver2 {width:80%; background:#ffffff;}
+.verd2 {width:80%; background:#fde6e2;}
+.fal1 {width:60%; background:#d2f8f1;}
+.fal2 {width:80%; background:#fbcdc9;}
+/*.desc {width:100%; background:#8cd9ff;}
 .fal1 {width:60%; background:#f9d713;}
 .fal2 {width:40%; background:#f69696;}
+*/
+.unit_chart{width: 90%; min-width: 640px; margin: auto; display: block; padding: 1.5rem; margin-bottom: 1.5rem; border: 1px solid #b7b6b6;}
+.unit_chart.last{margin-bottom: 3rem;}
+.unit_chart.blue{background-color: #64d4f9;}
+.unit_chart.green{background-color: #28d8b3;}
+.unit_chart.red{background-color: #fa6b5b;}
+.unit_chart>p{width: 64px; font-family: "TradeGothic20"; letter-spacing: 0.6px; text-transform: uppercase; text-align: center!important; color: #FFF; }
+.unit_chart>p>span{display: block;}
+.unit_chart>p>span::after{content: "%";}
+.chart_container.pie{width: 312px; height: 148px;}
+.chart_container.bar{width: 180px;}
+.actual_piechart{ width: 100%; height: 100%;}
 
+.unit_chart .dichos{position: absolute; right: 16%; top: 40%;}
+.unit_chart .hechos{position: absolute; left: 16%; top: 40%;}
+.unit_chart .centered{position: absolute; left: 45.5%; top: 35%; font-size: 1.5rem; letter-spacing: 1px;}
+
+.unit_chart.bar_right{text-align: right;}
+.unit_chart.bar_right .hechos,
+.unit_chart.bar_right .dichos{font-size: 3rem; top: 37%; left: 13%;}
+.unit_chart .ch-column{}
+.unit_chart .ch-column{}
+
+.drop_shadow{-webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
+.radius_2{-webkit-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.3); -moz-box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.3); box-shadow: 1px 1px 6px 0px rgba(0,0,0,0.3);}
 
 /* CAMBIOS EN STACKS */
 
