--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -636,6 +636,26 @@ code {
     color: #d43b33;
 }
 
+.quote_opinologo .btn_verdadero,
+.quote_opinologo .btn_verdades-descontextualizadas,
+.quote_opinologo .link,
+.quote_opinologo .btn_falso{position: relative; font-size: 1.8rem; font-family: "TradeGothic20"; margin-right: 1.5rem;}
+
+.quote_opinologo .btn_verdadero::before,
+.quote_opinologo .btn_verdades-descontextualizadas::before,
+.quote_opinologo .link::before,
+.quote_opinologo .btn_falso::before{ content: ""; background-image: url('images/sprite.png'); background-repeat: no-repeat; width: 30px; height: 30px; display: inline-block; vertical-align: bottom;}
+
+.quote_opinologo  *{text-decoration: none!important;}
+.quote_opinologo .btn_verdadero{color: #40d875;}
+.quote_opinologo .btn_verdadero::before{ background-position: -40px -3px;}
+.quote_opinologo .btn_verdades-descontextualizadas{position: relative;  color: #64d4f8; }
+.quote_opinologo .btn_verdades-descontextualizadas::before{ background-position: -111px -3px;}
+.quote_opinologo .btn_falso{color: #f66b5b;}
+.quote_opinologo .btn_falso::before{ background-position: -3px -3px;}
+.quote_opinologo .link{color: #878787;}
+.quote_opinologo .link::before{ background-position: -76px -3px;}
+
 .separador {
 	font-size:80%;
 	width:93.5%;
@@ -644,7 +664,7 @@ code {
 }
 
 .separador span {
-	background:#FFF;
+	background:#FAFAFA;
 	top:7px;
 	padding:5px 10px 0px 0px;
 }
@@ -691,6 +711,7 @@ code {
 	-moz-border-radius: 50%;
 	border-radius: 50%;
 }
+.who *{text-decoration: none!important;}
 
 .who div {
 	width:128px;
@@ -718,7 +739,8 @@ code {
 	font-family:'Roboto Condensed', sans-serif;
 	font-weight:400;
 	color:#888;
-	font-size:90%;
+	font-size: 84%;
+    line-height: 2.2rem;
 	margin-bottom:3px;
 }
 
@@ -1936,7 +1958,7 @@ nav.archii {padding:5px 40px 0px; margin-top:20px;}
 .fal2 {width:40%; background:#f69696;}
 */
 .unit_chart{width: 90%; min-width: 640px; margin: auto; display: block; padding: 1.5rem; margin-bottom: 1.5rem; border: 1px solid #b7b6b6;}
-.unit_chart.last{margin-bottom: 3rem;}
+.unit_chart.last{margin-bottom: 5rem;}
 .unit_chart.blue{background-color: #64d4f9;}
 .unit_chart.green{background-color: #28d8b3;}
 .unit_chart.red{background-color: #fa6b5b;}
