--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -322,6 +322,7 @@ code {
 	color:#D43B33;
 	font-size:80%;
 	margin-left:25px;
+	margin-bottom: 1rem;
 }
 
 .ficha-link span:nth-of-type(2):before {
@@ -347,6 +348,8 @@ code {
 .side-link {
 	height:72px;
 	margin-bottom:36px;
+	display: block;
+    margin: 0 auto 36px auto;
 }
 
 .side-link div {
@@ -367,6 +370,7 @@ code {
 .post {
 	margin-bottom:25px;
 	font-size:175%;
+	vertical-align: top;
 }
 
 .post span {
@@ -384,6 +388,10 @@ code {
 
 #home-content a.mini:nth-of-type(even) {
 	margin-right:4%;
+}
+.ad_space{
+	display: block;
+    margin: 1rem auto;
 }
 
 .topp {
@@ -826,7 +834,8 @@ code {
 }
 
 .sidebar .ficha-link {
-	margin:15px 0px 5px;
+	display: block;
+	margin:15px auto 5px auto;
 }
 
 .sidebar a:nth-of-type(4) {
@@ -1447,12 +1456,12 @@ ol li a {
 }
 
 #articles a:nth-of-type(3n+2) {
-	margin:60px 1.8%;
+	margin: 30px 1.8%;
 }
 
 #articles a {
-	margin:60px 0px;
-	margin:60px -2px 60px -3px;
+	margin:30px 0px;
+	margin:30px -2px 60px -3px;
 }
 
 #fichas a {
