--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -1902,6 +1902,9 @@ header {
 .wadafact .logo_wada {text-align: center; margin-bottom: 0px!important}
 .wadafact .logo_wada img {float: none!important}
 
+.opinologo .post-list {width: 100%;}
+.opinologo .post-list .titulo_post_opinologo {margin-left: 0px!important;}
+
 }
 
 
