--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -81,7 +81,7 @@ div.jqcloud{overflow:hidden;position:relative}div.jqcloud span{padding:0}div.jqc
 
 /*** SIZING WITH REM ***/
 html { font-size: 62.5%; } 
-body { font-size: 14px; font-size: 1.4rem; } /* =14px */
+body { font-size: 14px; font-size: 1.4rem; color:#4c4e4d;} /* =14px */
 h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
 
 .first{ margin-left: 0; padding-left: 0;}
@@ -186,6 +186,7 @@ footer {
 	font-family:'Roboto Condensed', sans-serif;
 	font-weight:400;
 	font-size:90%;
+	bottom: -2px;
 }
 
 footer a {
@@ -300,7 +301,7 @@ code {
 }
 
 #articles {
-	background:#3F3F3F;
+	/*background:#3F3F3F;*/
 }
 
 #articles .wrapper {
@@ -321,6 +322,7 @@ code {
 	overflow:hidden;
 	box-shadow:0 3px 3px -3px #000;
 	vertical-align:top;
+	width: 33%;
 }
 
 .ficha-link div {
@@ -382,8 +384,8 @@ code {
 
 .side-link span {
 	margin-left:80px;
-	font-size:105%;
-	padding:10px 0px;
+	font-size:0.8em;
+	padding:5px 0px;
 }
 
 .post {
@@ -458,7 +460,7 @@ code {
 .contenido {
 	width:65%;
 	vertical-align:top;
-	
+	margin-top: 50px;
 	text-align:left;
 }
 
@@ -482,8 +484,8 @@ code {
 .contenido h1 {
 	margin:10px 0px;
 	font-size:250%;
-	width:93.5%;
-	max-width:650px;
+	width:100%;
+	max-width:100%;
 	line-height: 50px;
 }
 .contenido strong,
@@ -570,16 +572,16 @@ code {
 }
 
 .contenido blockquote p{
-	color:#DE5141;
-	width:84%;
-	max-width:650px;
-	margin-left:0px;
-	text-align:left;
-	font-size:115%;
-	letter-spacing:0.018em;
-	font-style:italic;
-	margin:32px 0px 32px 0px;
-	text-align: left!important;
+	color: #DE5141;
+    width: 70%;
+    max-width: 650px;
+    margin-left: 0px;
+    text-align: left;
+    font-size: 80%;
+    letter-spacing: 0.018em;
+    font-style: italic;
+    margin: 10px 0px 32px 50px;
+    text-align: left!important;
 }
 
 .contenido blockquote.quote:before {
@@ -618,7 +620,7 @@ code {
 .wadafact .logo_wada {width: 100%; margin-bottom: 20px;}
 .wadafact .logo_wada img{float: left;}
 .wadafact .logo_wada h3{float: left; font-size: 26px; margin-top: 20px; font-weight: normal; text-transform: uppercase; color:#3f3f3f;}
-.intro { text-align: left !important; } 
+.intro { text-align: left !important; font-size: 25px; color: rgba(0,0,0,.5); } 
 
 .titulo_post_opinologo {font-size: 65%; margin-left: 330px!important;}
 
@@ -643,6 +645,7 @@ code {
 
 #ensayo-wadafact a.mini:last-of-type {margin-bottom: 0px!important;}
 #ensayo-wadafact p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
+p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
 
 .whatthefact blockquote {
 	color:#3F3F3F;
@@ -1473,13 +1476,6 @@ ol li a {
 	color:#F7DEA0;
 }
 
-
-
-
-
-
-
-
 @media (min-width:1000px) {
 
 .wrapper {
@@ -1490,7 +1486,7 @@ ol li a {
 	width:86%;
 	max-width:1100px;
 	min-width:950px;
-	text-align:left;
+	text-align:center;
 }
 
 #articles a:nth-of-type(3n+2) {
@@ -2072,15 +2068,17 @@ p strong {color: #606060;}
 }
 
 @media (min-width: 685px) {
-	.who, .postura_link {width:47%;}
+	.who, .postura_link {width:100%;}
 }
 
 .opinologo h1 {text-align:center;}
-.opinologo { width: 100%;}
+/*.opinologo { width: 100%;}*/
 
 .list h1 a {color:inherit;}
 
 .pointer {-webkit-animation:grow 2s ease-in-out 0s;-moz-animation:grow 2s ease-in-out 0s;animation:grow 2s ease-in-out 0s;}
+
+.charts{ text-align: center;}
 
 @-webkit-keyframes grow {
     from {-webkit-transform:scale(0);}
