--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -246,7 +246,7 @@ footer a {
 	height:480px;
 	overflow:hidden;
 	margin-bottom:-8px;
-	background: url(https://plumasatomicas.com/wp-content/uploads/2016/09/secretario-1.jpg;);
+	/*background: url(https://plumasatomicas.com/wp-content/uploads/2016/09/secretario-1.jpg;);*/
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
